# aspic-operator

./: .gitignore  .hadolint.yaml  .helmignore  Dockerfile  Justfile  README.md  k3d-cluster.yaml  kind-cluster.yaml  pyproject.toml  readme.md  requirements.txt  shell.nix  skaffold.yaml
.github/: release-drafter.yml
.github/workflows/: cicd.yaml  helm.yaml  release-drafter.yaml
aspic/: api.py  cli.py  k8s.py  main.py  ops.py
aspic/api/api_v1/: api.py
aspic/core/: config.py
bootstrap/: default.yaml
bootstrap/apps/argo/: ingress.yaml  kustomization.yaml
bootstrap/apps/argo-events/: aspic-rbac.yaml  aspic-us-sensor.yaml  kustomization.yaml
bootstrap/apps/argo-rollouts/: kustomization.yaml
bootstrap/apps/argocd/: argo-server-deployment.yaml  argocd-cm.yaml  argocd-ingress.yaml  aspic-eventsource.yaml  aspic-rbac.yaml  eventbus.yaml  ingress.yaml  kustomization.yaml  rollouts-ingress.yaml  workflow-rbac.yaml  (+3 more)
bootstrap/configs/: 0-eventbus.yaml  1-rbac.yaml  2-eventsource.yaml  3-sensor.yaml
examples/: simple-project.yaml  update-stream.yaml
helm/: Chart.yaml  aspic-operator-0.1.0.tgz  index.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  admission.yaml  certmanager.yaml  clusterrole.yaml  clusterrolebinding.yaml  crd-project.yaml  crd-update-streams.yaml  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  webhook-certs.yaml
olm/: argocd.yaml  catalog_source.yaml
olm/argocd/: argocd.yaml
olm/hive/: subscription.yaml
olm/ocm/: cluster_manager.yaml  subscription.yaml
olm/tekton/: subscription.yaml
scripts/: testing.sh
(+10 files in other folders)
