[tool.poetry]
name = "aspic"
version = "0.1.0"
description = ""
authors = ["Thomas Pham <thomas.pham@ithings.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
kopf = {extras = ["full-auth"], version = "1.35.3"}
click = "^8.1.2"
PyYAML = "^6.0"
pykube = "^0.15.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
