[tool.poetry]
name = "aspic"
version = "0.1.0"
description = ""
authors = ["Thomas Pham <thomas.pham@ithings.ch>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kopf = {extras = ["dev","full-auth"], version = "1.35.4"}
click = "^8.1.2"
PyYAML = "^6.0"
pykube-ng = "^22.1.0"
fastapi = "^0.75.1"
pydantic = "^1.9"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
hera-workflows = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
